2006-10-07  Elijah Newren  <newren gmail com>

	* src/yelp-print.c (yelp_print_present_status_dialog): Remove
	markup from translatable messages.  #360450

2006-10-05  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-utils.c: 
	Don't crash when manpath (prog) || MANPATH (env.)
	is available
	
==================== 2.16.1 ====================
2006-10-02  Don Scorgie  <dscorgie@cvs.gnome.org>

	* NEWS:
	* configure.in:
	- Version 2.16.1
	
2006-09-29  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-settings.c: 
	* src/yelp-settings.h:
	* src/yelp-window.c:
	Make F7 toggle caret properly
	Set initial state of caret in prefs window

2006-09-17  Christian Persch  <chpe@cvs.gnome.org>

	* src/Yelper.cpp:
	* src/Yelper.h:

	Fix the build with gecko trunk.

2006-09-12  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:

	Prefer xulrunner over mozilla.

==================== 2.16.0 ====================
2006-09-04  Brent Smith  <gnome@nextreality.net>

	* NEWS:
	* configure.in:
	- Version 2.16.0

2006-09-03  Brent Smith  <gnome@nextreality.net>

	* src/yelp-toc-pager.c: (toc_add_doc_info): check if the document
	category exists, and return if it does not should fix 353554

2006-08-30  Don Scorgie  <don@Madaline>

	* src/yelp-io-channel.c: 
	Don't double free bzip streams
	
2006-08-30  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-search-pager.c: 
	Move online url to perminant address at gnome.org

2006-08-28  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-io-channel.c:
	Supress critical warning when it isn't actually 
	critical

	* src/yelp-info-parser.c:
	* src/yelp-io-channel.c:
	Don't fall over when part of the info file
	goes missing (bug #353209)

2006-08-16  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-search-pager.c: 
	Fix crash when apropos goes nuts (bug #347467)
	Patch from Priit Laes

2006-08-10  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-info-parser.c: 
	Fix stupid crash on CVS info file caused by