@@ -1,3 +1,8 @@
+2006-10-25  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-search-pager.c: 
+	Don't crash when searching for empty term.  Bug #363949
+	
 2006-10-07  Elijah Newren  <newren gmail com>
 
 	* src/yelp-print.c (yelp_print_present_status_dialog): Remove
